--- a/components/Calendar/CalendarForm.module.scss
+++ b/components/Calendar/CalendarForm.module.scss
@@ -1,7 +1,10 @@
 .form {
-  width: 22%;
+  width: 25%;
+  max-width: 400px;
+  border-radius: 12px;
+  padding: .25rem 1rem 1.25rem;
+  background-color: white;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  border-radius: 6px;
   .card {
     display: flex;
     justify-content: center;
@@ -29,4 +32,15 @@
     }
   }
 }
-
+@media (max-width: 1400px) {
+  .form {
+    width: 100%;
+    .col {
+      div {
+        width: 2rem;
+        height: 2rem;
+        margin: 10px;
+      }
+    }
+  }
+}
