--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,4 +1,9 @@
 .main {
-  min-height: 100vh;
-  padding: 5rem;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(224, 227, 246);
 }
