--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -9,5 +9,13 @@
   .arrow {
     margin: .5rem 0;
   }
-
+}
+.calendar {
+  &__input {
+    width: 18rem;
+    height: 2rem;
+    margin: 1rem;
+    border-radius: 8px;
+    border: 1px solid black;
+  }
 }
