change files directories.

--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -1,4 +1,4 @@
-.month-input {
+.month {
   display: flex;
   justify-content: space-between;
   padding: 1.5rem;
@@ -8,14 +8,5 @@
   }
   .arrow {
     margin: .5rem 0;
-  }
-}
-.calendar {
-  &__input {
-    width: 18rem;
-    height: 2rem;
-    margin: 1rem;
-    border-radius: 8px;
-    border: 1px solid black;
   }
 }
