--- a/components/Calendar/Form/CalendarForm.module.scss
+++ b/components/Calendar/Form/CalendarForm.module.scss
@@ -2,7 +2,7 @@
   width: 25%;
   max-width: 400px;
   border-radius: 12px;
-  padding: .25rem 1rem 1.25rem;
+  padding: 0.25rem 1rem 1.25rem;
   background-color: white;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   .card {
@@ -18,7 +18,7 @@
       height: 2.5rem;
       margin: 5px;
       border: 1px solid transparent;
-      font-size: .95rem;
+      font-size: 0.95rem;
     }
     .day {
       display: flex;
