--- a/components/Calendar/Form/CalendarForm.module.scss
+++ b/components/Calendar/Form/CalendarForm.module.scss
@@ -6,8 +6,8 @@
   background-color: white;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   .card {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns:  repeat(7, 1fr);
   }
   .col {
     div {
