styling to calendar form.

--- a/components/Calendar/Input/CalendarInput.module.scss
+++ b/components/Calendar/Input/CalendarInput.module.scss
@@ -1,9 +1,11 @@
 .calendar {
   .input {
-    width: 18rem;
-    height: 2rem;
+    width: 16rem;
+    height: 3rem;
     margin: 1rem;
     border-radius: 8px;
     border: 1px solid black;
+    font-size: .75rem;
+    padding: 0 .5rem;
   }
 }
