--- a/components/Calendar/Form/CalendarForm.module.scss
+++ b/components/Calendar/Form/CalendarForm.module.scss
@@ -1,6 +1,6 @@
 .form {
   width: 100%;
-  max-width: 400px;
+  max-width: 380px;
   border-radius: 12px;
   padding: 0.25rem 1rem 1.25rem;
   background-color: white;
@@ -19,6 +19,7 @@
       margin: 5px;
       border: 1px solid transparent;
       font-size: 0.95rem;
+      color: rgb(49, 49, 49);
     }
     .day {
       display: flex;
@@ -39,7 +40,7 @@
       div {
         width: 2rem;
         height: 2rem;
-        margin: 10px;
+        margin: 5px;
       }
     }
   }
