--- a/components/Calendar/Form/CalendarForm.module.scss
+++ b/components/Calendar/Form/CalendarForm.module.scss
@@ -1,5 +1,6 @@
 .form {
   width: 100%;
+  height: 450px;
   max-width: 380px;
   border-radius: 12px;
   padding: 0.25rem 1rem 1.25rem;
@@ -10,7 +11,7 @@
     grid-template-columns:  repeat(7, 1fr);
   }
   .col {
-    div {
+    div{
       display: flex;
       justify-content: center;
       align-items: center;
@@ -20,6 +21,12 @@
       border: 1px solid transparent;
       font-size: 0.95rem;
       color: rgb(49, 49, 49);
+    }
+    .focused {
+      background-color: white;
+      border-radius: 100%;
+      cursor: pointer;
+      border: 1px solid black;
     }
     .day {
       display: flex;
