--- a/components/Calendar/Form/CalendarForm.module.scss
+++ b/components/Calendar/Form/CalendarForm.module.scss
@@ -1,7 +1,7 @@
 .form {
   width: 100%;
-  height: 450px;
-  max-width: 380px;
+  height: 365px;
+  max-width: 299px;
   border-radius: 12px;
   padding: 0.25rem 1rem 1.25rem;
   background-color: white;
@@ -15,15 +15,15 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 2.5rem;
-      height: 2.5rem;
-      margin: 5px;
+      width: 40px;
+      height: 40px;
       border: 1px solid transparent;
-      font-size: 0.95rem;
-      color: rgb(49, 49, 49);
+      font-size: 12px;
+      color: #5F6579;
     }
     .focused {
       background-color: white;
+      color: #5F6579;
       border-radius: 100%;
       cursor: pointer;
       border: 1px solid black;
@@ -31,6 +31,7 @@
     .day {
       display: flex;
       justify-content: center;
+      font-size: 13px;
       &:hover {
         background-color: white;
         border-radius: 100%;
