--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -1,12 +1,14 @@
 .month {
   display: flex;
   justify-content: space-between;
-  padding: 1.5rem;
+  padding: 1.4rem;
   .bold {
     font-weight: 700;
-    font-size: 1.1rem;
+    margin-top: -0.25rem;
+    color: #202945;
+    font-size: 14px;
   }
   .arrow {
-    margin: .5rem 0;
+    margin: .05rem -1.25rem;
   }
 }
