--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5,5 +5,5 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(224, 227, 246);
+  background: #DFE2F0;
 }
