Input date range on focus.

--- a/components/Calendar/Input/CalendarInput.module.scss
+++ b/components/Calendar/Input/CalendarInput.module.scss
@@ -34,6 +34,7 @@
       color: #5F6579;
       font-size: 12px;
       margin-bottom: .05rem;
+      line-height: 15px;
     }
     input {
       width: 200px;
