--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,11 +3,6 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
+  background: #dfe2f0;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
