--- a/components/Calendar/Input/CalendarInput.module.scss
+++ b/components/Calendar/Input/CalendarInput.module.scss
@@ -2,12 +2,9 @@
   margin: 20rem 0;
   .input {
     width: 16rem;
-    height: 3rem;
     margin: 1rem;
-    border-radius: 8px;
     border: 1px solid #202945;
     font-size: .75rem;
-    padding: 0 .5rem;
     overflow: hidden;
   }
   &__background {
@@ -15,21 +12,20 @@
     height: 4rem;
     width: 18rem;
     padding: 2rem;
-    border-radius: 8px;
   }
   &__white {
     position: relative;
     background-color: white;
-    width: 18rem;
-    height: 3.5rem;
-    border-radius: 1rem;
+    width: 280px;
+    height: 50px;
+    border-radius: 10px;
     border: .1px solid #202945;
   }
   &__left {
     display: flex;
     flex-direction: column;
     align-items: space-around;
-    padding: 13px;
+    padding: 10px 15px;
     label {
       color: #5F6579;
       font-size: 12px;
@@ -50,7 +46,7 @@
     .icon {
       position: absolute;
       left: 88%;
-      bottom: 30%;
+      bottom: 25%;
     }
   }
 }
